app/assets/stylesheets/layout/lists/types/tags.css
ul.horizontal.tag-list {
  overflow: visible;
}

li.genre {
  min-height: 150px;
}

.tag-set, .date, .source {
  font-size: 0.8em;
}
.tag-set > .overflow {
  display: none;
  border-bottom: none;
}
.tag-set.show-all > .overflow {
  display: inline;
}
.tag-set, .date, .source, .underline a {
  font-style: italic;
}
.tag-set, .date, .source, .underline a, .tag-set a {
  color: #aaa;
  text-decoration: none;
  font-weight: normal;
}

